@@ -1,5 +1,7 @@
 *SVN*
 
+* Add Object#acts_like? and Time#acts_like_time? and Date#acts_like_date? to facilitate duck-typing. [Jamis Buck]
+
 * Make 1.months and friends accurate by introducing a Duration class.  #6835 [eventualbuddha]
 
 * Document Inflector.ordinalize and merge docs from String inflections.  #7023 [smeade]
